# swiftllm

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LANGUAGE_BINDINGS.txt  LICENSE  README.md  config.example.toml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  python-release.yml  release.yml
dashboard/: app.js  index.html  styles.css
include/: swiftllm.h
python/swiftllm/: __init__.py  _swiftllm.pyi
src/: config.rs  failover.rs  ffi.rs  lib.rs  main.rs  mcp_server.rs  python.rs  server.rs  wasm.rs
src/consensus/: engine.rs
src/endpoints/: audio.rs  images.rs  mod.rs  search.rs
src/middleware/: cache.rs  cost.rs  mod.rs  rate_limit.rs  tower_cache.rs  tower_cost.rs  tower_rate_limit.rs
src/providers/: anthropic.rs  bedrock.rs  gemini.rs  generic.rs  groq.rs  mistral.rs  mod.rs  ollama.rs  openai.rs  registry.rs  schema.rs  together.rs  types.rs
src/routing/: latency.rs  mod.rs  quality.rs  router.rs
swiftllm-node/: Cargo.toml  index.d.ts  index.js  package.json
swiftllm-node/src/: lib.rs
tests/: integration_tests.rs
