[package]
name = "llm-proxy"
version = "0.1.0"
edition = "2021"
description = "A blazing-fast universal LLM gateway that unifies OpenAI, Anthropic, Ollama and more behind a single API"
license = "MIT"
repository = "https://github.com/yourusername/llm-proxy"
keywords = ["llm", "proxy", "openai", "anthropic", "ollama"]
categories = ["web-programming::http-server", "development-tools"]

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
toml = "0.8"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
tokio-stream = "0.1"
futures = "0.3"
bytes = "1"
async-trait = "0.1"
anyhow = "1"
