[package]
name = "swiftllm"
version = "0.4.0"
edition = "2021"
description = "A blazing-fast universal LLM gateway that unifies OpenAI, Anthropic, Ollama and more behind a single API"
license = "MIT"
repository = "https://github.com/Elyeden0/swiftllm"
keywords = ["llm", "proxy", "openai", "anthropic", "gateway"]
categories = ["web-programming::http-server", "development-tools"]

[lib]
name = "swiftllm"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "swiftllm-server"
path = "src/main.rs"

[features]
default = []
python = ["dep:pyo3"]

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls-native-roots-no-provider"] }
rustls = { version = "0.23", default-features = false, features = ["aws_lc_rs"] }
dotenvy = "0.15"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
tokio-stream = "0.1"
futures = "0.3"
bytes = "1"
async-trait = "0.1"
anyhow = "1"
hmac = "0.12"
sha2 = "0.10"
secrecy = { version = "0.10", features = ["serde"] }
opentelemetry = "0.31"
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic"] }
tracing-opentelemetry = "0.32"
pyo3 = { version = "0.22", features = ["extension-module"], optional = true }
