[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "swiftllm_py"
version = "0.3.0"
description = "A blazing-fast universal LLM gateway — call OpenAI, Anthropic, Gemini, Mistral & Ollama through one unified API."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
authors = [{ name = "Elyeden" }]
keywords = ["llm", "openai", "anthropic", "gemini", "mistral", "ollama", "gateway", "proxy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/Elyeden0/swiftllm"
Repository = "https://github.com/Elyeden0/swiftllm"

[tool.maturin]
# Build the native extension as swiftllm._swiftllm
module-name = "swiftllm._swiftllm"
features = ["python"]
# Include the pure-Python wrapper package
python-source = "python"
